--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage {graphicx} 
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}}
+\newtheorem{theorem}{Theorem}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
