--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{titlesec}
 \usepackage {graphicx} 
 %\newcommand{\edal}{\end{align}}
-%\newcommand{\bgal}{\begin{align}}
+%\newcommand{\bgal}{\begin{align}\end{align}}
 \newtheorem{theorem}{Theorem}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
@@ -47,7 +47,7 @@ m n\\
 \tableofcontents
 
 \include{chapter1}
-%\include{chapter2}
+\include{chapter2}
 %\include{chapter3}
 %\include{chapter4}
 %\include{chapter5}
